# webdropper

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
public/: index.html  scripts.js
src/: main.rs
