[package]
name = "webdropper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
rust-embed = "6"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["trace"] }
