[package]
name = "webdropper"
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple webservice to allow uploading files to a directory"
repository = "https://github.com/coredump-ch/webdropper"
authors = [
    "Raphael Nestler <raphael.nestler@gmail.com>",
    "Danilo Bargen <mail@dbrgn.ch>",
]
categories = ["web-programming::http-server"]
keywords = ["webserver", "http", "upload"]

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
rust-embed = "6"
html-escape = "0.2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = { version = "0.4.0" }
tower-http = { version = "0.4.0", features = ["trace", "limit"] }

[dev-dependencies]
tempfile = "3.7.0"
